plans/260503-k3s-argocd-wg-easy/configs/apps/vpn-middleware-dev.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vpn-only
  namespace: dev
spec:
  ipAllowList:
    sourceRange:
      - 10.8.0.0/24
