plans/260503-k3s-argocd-wg-easy/configs/apps/vpn-middleware-uat.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vpn-only
  namespace: uat
spec:
  ipAllowList:
    sourceRange:
      - 10.8.0.0/24
